--- a/rs/Cargo.toml
+++ b/rs/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 
 [dependencies]
 pcap = "1.0.0"
+tungstenite = "0.18.0"
+ctrlc = { version = "3.0", features = ["termination"] }
+url = "2.3.1"
