--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,10 @@ tungstenite = "0.18.0"
 ctrlc = { version = "3.0", features = ["termination"] }
 url = "2.3.1"
 protobuf = "3.2.0"
+bytes = "1.4.0"
 kcp = {git = "https://github.com/RustySamovar/kcp"}
+openssl = "0.10.0"
+base64 = "0.13.0"
 
 [build-dependencies]
 protobuf-codegen = "3.2.0"
