--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,12 @@ kcp = {git = "https://github.com/RustySamovar/kcp"}
 rsa = "0.8.1"
 base64 = "0.13.0"
 protobuf-json-mapping = "3.2.0"
+ws = "0.9.2"
+serde = {version = "1.0.152",features = ["derive"] }
+serde_json = "1.0.92"
+once_cell = "1.17.0"
+lazy_static = "1.4.0"
+protobuf-parse = "3.2.0"
 
 [build-dependencies]
 protobuf-codegen = "3.2.0"
