--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,8 @@ serde = {version = "1.0.152",features = ["derive"] }
 serde_json = "1.0.92"
 once_cell = "1.17.0"
 lazy_static = "1.4.0"
-protobuf-parse = "3.2.0"
+common = { path = "./common" }
+crossbeam-channel = "0.5.8"
 
 [build-dependencies]
 protobuf-codegen = "3.2.0"
