--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,32 +1,6 @@
-[package]
-name = "evergreen_rs"
-version = "0.1.0"
-edition = "2021"
-
-
-[lib]
-name = "evergreen"
-path = "src/lib.rs"
-
-
-[[bin]]
-name = "iridium_backend"
-path = "src/bin/main.rs"
-
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-pcap = "1.0.0"
-ctrlc = { version = "3.0", features = ["termination"] }
-protobuf = "3.2.0"
-bytes = "1.4.0"
-kcp = {git = "https://github.com/RustySamovar/kcp"}
-rsa = "0.8.1"
-base64 = "0.13.0"
-protobuf-json-mapping = "3.2.0"
-ws = "0.9.2"
-serde = {version = "1.0.152",features = ["derive"] }
-serde_json = "1.0.92"
-common = { path = "./common" }
-crossbeam-channel = "0.5.8"
+[workspace]
+members = [
+    "evergreen",
+    "common",
+    "rustytoolkit"
+]
