--- a/rustytoolkit/Cargo.toml
+++ b/rustytoolkit/Cargo.toml
@@ -5,6 +5,16 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+name = "toolkit"
+path = "src/lib.rs"
+
+
+[[bin]]
+name = "rustytoolkit"
+path = "src/main.rs"
+
+
 [dependencies]
 evergreen_rs = { path = "../evergreen" }
 common = { path = "../common" }
@@ -15,3 +25,9 @@ eframe = { version = "0.21.0", default-features = false, features = [
     "glow",          # Use the glow rendering backend. Alternative: "wgpu".
     "persistence",   # Enable restoring app state when restarting the app.
 ] }
+
+serde = { version = "1", features = ["derive"] }
+
+pcap = "1.0.0"
+crossbeam-channel = "0.5.8"
+protobuf = "3.2.0"
