--- a/evergreen/Cargo.toml
+++ b/evergreen/Cargo.toml
@@ -11,7 +11,7 @@ path = "src/lib.rs"
 
 [[bin]]
 name = "iridium_backend"
-path = "src/bin/main.rs"
+path = "src/iridium_backend/main.rs"
 
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
